# NSSS-VG-Turning-Points

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: config.yaml
data/processed/: 01_clean_ohlcv.csv  02_technical_features.csv  03_labels.csv  04_visibility_features.csv  05_reversal_signals.csv
data/raw/: NSSS_stock_history.csv
reports/: NSSS_Project_Report.md
reports/logs/: run_summary.json
reports/tables/: backtest_summary.csv  backtest_trades.csv  equity_curve.csv  rf_predictions.csv  rf_walk_forward_metrics.csv  rule_based_metrics.csv
scripts/: download_data.py  run_pipeline.py
src/nsss_vg/data/: ingest.py  preprocess.py
src/nsss_vg/evaluation/: backtest.py  leakage.py  metrics.py
src/nsss_vg/graph/: visibility.py
src/nsss_vg/labeling/: turning_points.py
src/nsss_vg/models/: rule_based.py
src/nsss_vg/viz/: plots.py
tests/: test_labeling.py  test_leakage.py  test_visibility.py
