[project]
name = "nsss-vg-turning-points"
version = "0.1.0"
description = "Visibility graph based reversal-zone detection for NSSS.JK"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "networkx>=3.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "yfinance>=0.2"
]

[tool.setuptools.packages.find]
where = ["src"]
